--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=us-cdbr-east-05.cleardb.net
 DB_PORT=3306
-DB_DATABASE=heroku_a6145b455c8cd9c?
+DB_DATABASE=heroku_a6145b455c8cd9c
 DB_USERNAME=b5c4ed431e4c35
 DB_PASSWORD=7f52b86d
 
